p2/shared/yaml/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iot
  labels:
    name: iot
    app: iot
    version: v1.0.0
    environment: production
    team: development
    project: iot
