p2/shared/yaml/service.yaml
# app1 Service
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: iot
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app1
---
# app2 Service
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: iot
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app2
---
# app3 Service (default)
apiVersion: v1
kind: Service
metadata:
  name: app3-svc
  namespace: iot
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: app3
